fixed the hero image overlapping

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ main {
     padding-bottom: 20px;
     margin-top: 12px;
     border-radius: 15px;
+    z-index: 3;
     /* margin-bottom: 162px; */
 }
 
@@ -153,6 +154,7 @@ main {
     border-style: double;
     border-width: 5px;
     font-weight:400px;
+    z-index: 3;
 }
 
 .special {
@@ -171,13 +173,16 @@ main {
 #hero {
     position: absolute;
     top: 0px;
-    right: 20vw;
-    width: 20vw;
-    min-width: 120px;
+    /* right: 20vw;
+    width: 20vw; */
+    right: 5%;
+    bottom: 25%;
+    min-width: 800px;
     max-width: 350px;
     z-index: 2;
     pointer-events: none;
     transform: scale(75%);
+    transform-origin: bottom right;
 }
 
 #logo {
